adding index.html and script.js

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Javascript</title>
+  <meta charset="UTF-8">
+  <title>Latihan</title>
 
 </head>
 <body>
-  <h1>Hello World</h1>
 
-  <script src="switch.js">
+  <script src="script.js">
   </script>
 </body> 
 </html>
