--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Latihan</title>
+  <title>DOM</title>
 
 </head>
 <body>
+
+<h1>Hello World</h1>
+<p>Paragraf 1</p>
+<p>Paragraf 2</p>
+
+<ul>
+  <li>Item 1</li>
+  <li>Item 2</li>
+</ul>
 
   <script src="script.js">
   </script>
