adding modified code/index.html and code/script.js files

--- a/code/index.html
+++ b/code/index.html
@@ -18,6 +18,8 @@
       margin: 30px auto;
       font-family: sans-serif;
       color: #333;
+    }
+    .biru-muda { background-color: lightblue; }
   </style>
 </head>
 <body>
@@ -29,6 +31,7 @@
           <a href="http://instagram.com/sandhikagalih">Instagram Sandhika Galih</a>
           <p class="p2">paragraf 2</p>
           <p class="p3">paragraf 3</p>
+          <button>Let's Go!</button>
       </section>
       <section id="b">
           <p>paragraf 4</p>
