adding modified code/index.html and code/script.js files

--- a/code/index.html
+++ b/code/index.html
@@ -31,7 +31,7 @@
           <a href="http://instagram.com/sandhikagalih">Instagram Sandhika Galih</a>
           <p class="p2">paragraf 2</p>
           <p class="p3">paragraf 3</p>
-          <button>Let's Go!</button>
+          <!-- <button>Let's Go!</button> -->
       </section>
       <section id="b">
           <p>paragraf 4</p>
