--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>DOM</title>
-
+	<title>Coba Snippet</title>
 </head>
 <body>
 
-<h1>Hello World</h1>
-<p>Paragraf 1</p>
-<p>Paragraf 2</p>
-
-<ul>
-  <li>Item 1</li>
-  <li>Item 2</li>
-</ul>
-
-  <script src="script.js">
-  </script>
-</body> 
+php	
+	
+</body>
 </html>
