--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,6 @@
       font-family: sans-serif;
       color: #333;
     }
-    .biru-muda { background-color: lightblue; }
   </style>
 </head>
 <body>
@@ -28,9 +27,9 @@
   <div id="container">
       <section id="a">
           <p class="p1">paragraf 1</p>
-          <a href="http://instagram.com/sandhikagalih">Instagram Sandhika Galih</a>
+          <a href="http://instagramccom/sandhikagalih">Instagram Sandhika Galih</a>
           <p class="p2">paragraf 2</p>
-          <p class="p3">paragraf 3</p>
+          <p class="p3" onclick="ubahWarnaP3()">paragraf 3</p>
           <!-- <button>Let's Go!</button> -->
       </section>
       <section id="b">
