adding modified code folder

--- a/code/index.html
+++ b/code/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gallery</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Execution Context, Hoisting & Scope</title>
+<!--   <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
 
-<div class="container">
+<!-- <div class="container">
   <img src="img/bridge.png" class="jumbo">
   <div class="thumbnail">
     <img src="img/bridge.png" class="thumb">
@@ -16,7 +16,7 @@
     <img src="img/tea.png" class="thumb">
     <img src="img/white.png" class="thumb">
   </div>
-</div>
+</div> -->
  
 <script src="script.js"></script> 
 </body>
