adding modified code/index.html and code/script.js files

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Execution Context, Hoisting & Scope</title>
-<!--   <link rel="stylesheet" href="style.css"> -->
+  <title>var, let, const</title>
 </head>
 <body>
-
-<!-- <div class="container">
-  <img src="img/bridge.png" class="jumbo">
-  <div class="thumbnail">
-    <img src="img/bridge.png" class="thumb">
-    <img src="img/coffee.png" class="thumb">
-    <img src="img/design.png" class="thumb">
-    <img src="img/shop.png" class="thumb">
-    <img src="img/tea.png" class="thumb">
-    <img src="img/white.png" class="thumb">
-  </div>
-</div> -->
  
 <script src="script.js"></script> 
 </body>
