--- a/code/index.html
+++ b/code/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>var, let, const</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Coba Arrow Function</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <div class="box"></div>
  
 <script src="script.js"></script> 
 </body>
