--- a/code/index.html
+++ b/code/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filter, Map & Reduce</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Tagged Template</title>
+  <style>
+    .hl {
+      background-color: salmon;
+    }
+  </style>
 </head>
+
 <body>
- 
-<script src="script.js"></script> 
+
+  <script src="script.js"></script>
 </body>
+
 </html>
