--- a/code/index.html
+++ b/code/index.html
@@ -5,17 +5,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>for..of & for..in</title>
+  <title>Spread Operator</title>
+  <style>
+    body {
+      background-color: salmon;
+      text-align: center;
+    }
+
+    .nama {
+      font-family: arial;
+      font-size: 80px;
+      color: white;
+    }
+
+    .nama span {
+      display: inline-block;
+      transition: .3s;
+      cursor: pointer;
+    }
+
+    .nama span:hover {
+      transform: scale(2) translateY(-20px);
+    }
   </style>
 </head>
 
 <body>
 
-  <ul>
-    <li class="nama">Sandhika</li>
-    <li class="nama">Doddy</li>
-    <li class="nama">Erik</li>
-  </ul>
+  <!-- <ul>
+    <li>Sandhika</li>
+    <li>Doddy</li>
+    <li>Erik</li>
+  </ul> -->
+
+  <h1 class="nama"><span>Sandhika</h1>
 
   <script src="script.js"></script>
 </body>
