adding modified code folder and new code/data/ folder

--- a/code/index.html
+++ b/code/index.html
@@ -5,40 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Spread Operator</title>
-  <style>
-    body {
-      background-color: salmon;
-      text-align: center;
-    }
-
-    .nama {
-      font-family: arial;
-      font-size: 80px;
-      color: white;
-    }
-
-    .nama span {
-      display: inline-block;
-      transition: .3s;
-      cursor: pointer;
-    }
-
-    .nama span:hover {
-      transform: scale(2) translateY(-20px);
-    }
-  </style>
+  <title>Callbacks</title>
 </head>
 
 <body>
-
-  <!-- <ul>
-    <li>Sandhika</li>
-    <li>Doddy</li>
-    <li>Erik</li>
-  </ul> -->
-
-  <h1 class="nama"><span>Sandhika</h1>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
   <script src="script.js"></script>
 </body>
